add: tela de cadastro

--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
                 </form>
                 <div class="index__link">
                     Ainda não possui conta ? <br>
-                    <a href="#"> Cadastre-se agora </a>
+                    <a href="/cadastro.html"> Cadastre-se agora </a>
                 </div>
             </div>
        </div>
